--- a/src/app/site/site-header/site-header.component.html
+++ b/src/app/site/site-header/site-header.component.html
@@ -5,7 +5,7 @@
     <button mat-button color="warning" class="right-menu" routerLink="/jobs">Find Jobs</button>
     <button mat-button color="warning" class="right-menu" routerLink="/jobs">Find Developers</button>
     <button mat-button color="warning" class="right-menu" routerLink="/search">Search</button>
-    <button mat-button color="warning" class="right-menu" routerLink="/signin">SignIn</button>
-    <button mat-button color="warning" class="right-menu" routerLink="/signup">SignUp</button>
+    <button mat-button color="warning" class="right-menu" routerLink="/auth/signin">SignIn</button>
+    <button mat-button color="warning" class="right-menu" routerLink="/auth/signup">SignUp</button>
   </mat-toolbar-row>
 </mat-toolbar>
