moved search component to shared module

--- a/src/app/site/home/home.component.html
+++ b/src/app/site/home/home.component.html
@@ -3,7 +3,7 @@
 </nav>
 <section id="banner">
   <div class="search-box">
-    <app-site-search></app-site-search>
+    <app-search></app-search>
   </div>
 </section>
 <section>
