--- a/src/app/shared/components/developer-profile/developer-profile.component.html
+++ b/src/app/shared/components/developer-profile/developer-profile.component.html
@@ -1,4 +1,4 @@
-<div class="card-item" (click)="(profileSlected(profile))" >
+<!-- <div class="card-item" (click)="(profileSlected(profile))" >
   <mat-card class="card">
     <mat-card-header>
       <div class="card-header flex-class">
@@ -33,4 +33,4 @@
       </div>
     </mat-card-content>
   </mat-card>
-</div>
+</div> -->
