--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,27 @@
-<section>
-  <router-outlet></router-outlet>
-</section>
+<div class="container" [class.is-mobile]="mobileQuery.matches">
+    <mat-toolbar color="primary" class="toolbar">
+        <button mat-icon-button (click)="snav.toggle()">
+            <mat-icon>menu</mat-icon>
+        </button>
+        <h1>Freelancer</h1>
+    </mat-toolbar>
+    <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+        <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
+            fixedTopGap="56">
+            sidenav content
+            <mat-nav-list>
+                <mat-list>
+                    <a *ngFor="let link of links" routerLink="{{link.route}}">
+                        <mat-list-item>
+                            <mat-icon matListIcon>{{link.icon}}</mat-icon>
+                            <h3 matLine> {{link.label}} </h3>
+                        </mat-list-item>
+                    </a>
+                </mat-list>
+            </mat-nav-list>
+        </mat-sidenav>
+        <mat-sidenav-content>
+            content
+        </mat-sidenav-content>
+    </mat-sidenav-container>
+</div>
