--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,13 +1,26 @@
-.body {
-    background-color: #F0F0F0;
-}
 .container {
-    display: flex;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
-.container-main {
-    width: 70%;
+
+.is-mobile .toolbar {
+  position: fixed;
+  z-index: 2;
 }
-.container-sidebar {
-    width: 30%;
+
+h1.app-name {
+  margin-left: 8px;
+}
+
+.sidenav-container {
+  flex: 1;
+}
+
+.is-mobile .sidenav-container {
+  flex: 1 0 auto;
 }
