Added search for the developers

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,7 +21,8 @@
             </mat-nav-list>
         </mat-sidenav>
         <mat-sidenav-content>
-            content
+            <router-outlet>
+            </router-outlet>
         </mat-sidenav-content>
     </mat-sidenav-container>
 </div>
