--- a/src/app/site/dev-filters/dev-filters.component.html
+++ b/src/app/site/dev-filters/dev-filters.component.html
@@ -1,2 +1,37 @@
 <p>dev-filters works!</p>
-<input type="text" name="" id="" placeholder="Select filters">
+<mat-form-field class="example-full-width">
+    <input type="text" placeholder="Pick one" aria-label="Number" matInput [matAutocomplete]="auto">
+    <mat-autocomplete #auto="matAutocomplete">
+    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+        {{option}}
+    </mat-option>
+    </mat-autocomplete>
+</mat-form-field>
+<h4>Hourly Rate</h4>
+<div class="hourly-rate">
+    <mat-slider
+        thumbLabel
+        [displayWith]="formatLabel"
+        tickInterval="1000"
+        min="1"
+        max="100000">
+
+    </mat-slider>  
+    <mat-slider
+        thumbLabel
+        [displayWith]="formatLabel"
+        tickInterval="1000"
+        min="1"
+        max="100000">
+
+    </mat-slider>      
+</div>
+<h4>Country</h4>
+<mat-form-field class="example-full-width">
+    <input type="text" placeholder="Pick one" aria-label="Number" matInput [matAutocomplete]="auto">
+    <mat-autocomplete #auto="matAutocomplete">
+    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+        {{option}}
+    </mat-option>
+    </mat-autocomplete>
+</mat-form-field>
