--- a/src/app/site/developers/developers.component.scss
+++ b/src/app/site/developers/developers.component.scss
@@ -1,10 +1,23 @@
 .container {
+    padding-top: 0%;
+    margin-top: 0%;
     display: flex;
-    margin: 1em;
+    // margin: 1em;
     flex-direction: row;
     flex-wrap: wrap;
 }
 .card {
-    max-width: 300px;
+    // margin: 1em;
+    margin-top: 0%;
+    padding: 0.5em;
+    max-width: 280px;
     flex-shrink: 1;
+}
+.card:hover {
+    
+}
+.container1 {
+    margin-top: 0%;
+    padding-top: 0%;
+    margin: 3em;
 }
