--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
             fixedTopGap="56" opened hasBackdrop=false>
             <dashboard-sidebar [links]="links"></dashboard-sidebar>
         </mat-sidenav>
-        <mat-sidenav-content>
+        <mat-sidenav-content class="container">
             <router-outlet></router-outlet>
         </mat-sidenav-content>
     </mat-sidenav-container>
