--- a/src/app/dashboard/mail/mail-item/mail-item.component.html
+++ b/src/app/dashboard/mail/mail-item/mail-item.component.html
@@ -1,4 +1,4 @@
-<a mat-list-item routerLink="../mail/{{mail.id}}">
+<a mat-list-item routerLink="../mail/{{mail.id}}" class="mail-item">
     <img matListAvatar src="../../../../assets/images/mail-avatar.PNG" alt="User">
     <h3 matLine> {{mail.from}} - {{mail.subject}} </h3>
     <!-- <p matLine>
@@ -6,3 +6,4 @@
         <span class="demo-2"> -- {{message.content}} </span>
     </p> -->
 </a>
+<mat-divider></mat-divider>
