--- a/src/app/dashboard/mail/compose/compose.component.html
+++ b/src/app/dashboard/mail/compose/compose.component.html
@@ -7,6 +7,6 @@
   <mat-form-field class="full-width">
     <input matInput placeholder="Subject" formControlName="subject">
   </mat-form-field>
-  <app-ngx-editor formControlName="body"></app-ngx-editor>
-  <button type="submit" mat-raised-button color="primary">Submit</button>
+  <app-ngx-editor formControlName="body" minHeight="200px"></app-ngx-editor>
+  <button type="submit" mat-raised-button color="primary">Send</button>
 </form>
