--- a/src/app/dashboard/mail/sent/sent.component.html
+++ b/src/app/dashboard/mail/sent/sent.component.html
@@ -1,3 +1,3 @@
 <mat-nav-list>
-    <app-mail-item  *ngFor="let mail of mails" [mail]="mail"></app-mail-item>
+    <app-mail-item  *ngFor="let mail of mails" [type]="sent" [mail]="mail"></app-mail-item>
 </mat-nav-list>
