added dashboard link to header

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
         <button mat-icon-button (click)="snav.toggle()">
             <mat-icon>menu</mat-icon>
         </button>
-        <h1>Freelancer</h1>
+        <h1><a mat-button routerLink="/">Freelancer</a></h1>
         <span class="app-spacer"></span>
         <div class="right">
             <button mat-button [matMenuTriggerFor]="menu">{{user.username}}</button>
