--- a/src/app/site/site-header/site-header.component.html
+++ b/src/app/site/site-header/site-header.component.html
@@ -2,6 +2,7 @@
   <mat-toolbar-row>
     <button routerLink="/" mat-button color="warning" class="icon">FREELANCE</button>
     <span class="spacer"></span>
+    <button *ngIf="isLoggedIn" mat-button color="warning" class="right-menu" routerLink="/dashboard">Dashboard</button>
     <button mat-button color="warning" class="right-menu" routerLink="/jobs">Find Jobs</button>
     <button mat-button color="warning" class="right-menu" routerLink="/jobs">Find Developers</button>
     <button mat-button color="warning" class="right-menu" routerLink="/search">Search</button>
