--- a/src/app/site/home/home.component.html
+++ b/src/app/site/home/home.component.html
@@ -1,6 +1,6 @@
-<nav>
+<!-- <nav>
   <app-site-header></app-site-header>
-</nav>
+</nav> -->
 <section id="banner">
   <div class="search-box">
     <app-search></app-search>
@@ -8,6 +8,6 @@
 </section>
 <section>
 </section>
-<footer>
+<!-- <footer>
   <app-site-footer></app-site-footer>
-</footer>
+</footer> -->
