--- a/src/app/site/developers/developers.component.scss
+++ b/src/app/site/developers/developers.component.scss
@@ -1,23 +1,11 @@
 .container {
-    padding-top: 0%;
-    margin-top: 0%;
-    display: flex;
-    // margin: 1em;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
 }
-.card {
-    // margin: 1em;
-    margin-top: 0%;
-    padding: 0.5em;
-    max-width: 280px;
-    flex-shrink: 1;
+
+.filters {
+  flex: 1 1 100px;
 }
-.card:hover {
-    
-}
-.container1 {
-    margin-top: 0%;
-    padding-top: 0%;
-    margin: 3em;
+
+.results {
+  flex: 6 1 200px;
 }
