--- a/src/app/site/home/home.component.scss
+++ b/src/app/site/home/home.component.scss
@@ -1,20 +1,10 @@
 #banner {
     background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url("../../../assets/images/home-banner.PNG");    
     opacity: 0.9;
-    // min-height: 2vh;
+    min-height: calc(100vh - 64px);
     height: 100%;
     display: flex;
     flex-flow:column;
     align-items: center;
     justify-content: center;
 }
-// .search-box {
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     flex-direction: column;
-// }
-// .search-align {
-//     margin-left: 35%;   
-//     padding-top: 10%; 
-// }
