auth with roles

--- a/src/app/site/developers/developers-list/developers-list.component.html
+++ b/src/app/site/developers/developers-list/developers-list.component.html
@@ -1,1 +1,1 @@
-<app-developers-item *ngFor="let developer of developers" [developer]="developer"></app-developers-item>
+<app-developers-item *ngFor="let developer of developers|async" [developer]="developer"></app-developers-item>
