--- a/src/app/site/developers/developers-item/developers-item.component.html
+++ b/src/app/site/developers/developers-item/developers-item.component.html
@@ -1,7 +1,7 @@
 <mat-card class="developer-card">
     <mat-card-header>
         <div mat-card-avatar class="developer-header-image"></div>
-        <mat-card-title>{{developer.username}}</mat-card-title>
+        <mat-card-title>{{developer.firstName}} {{developer.lastName}}</mat-card-title>
         <mat-card-subtitle>Web developer</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
