--- a/src/app/site/developers/developers-filter/developers-filter.component.html
+++ b/src/app/site/developers/developers-filter/developers-filter.component.html
@@ -1,4 +1,4 @@
-<h4>Filter</h4>
+<!-- <h4>Filter</h4>
 <form [formGroup]="filterForm">
     <mat-form-field>
         <mat-label>Skills</mat-label>
@@ -9,5 +9,4 @@
     <mat-slider class="range-slider" thumbLabel step="1000" [displayWith]="formatLabel" tickInterval="10" min="0" max="100000" formControlName="minFee"></mat-slider>
     <mat-slider class="range-slider" thumbLabel step="1000" [displayWith]="formatLabel" tickInterval="10" min="0" max="100000" formControlName="maxFee"></mat-slider>
 </form>
-<button mat-raised-button color="primary" (click)="filter">Filter</button>
-{{this.filterForm.value|json}}
+<button mat-raised-button color="primary" (click)="filter">Filter</button> -->
