--- a/src/app/site/developers/developers-item/developers-item.component.html
+++ b/src/app/site/developers/developers-item/developers-item.component.html
@@ -2,12 +2,15 @@
     <mat-card-header>
         <div mat-card-avatar class="developer-header-image"></div>
         <mat-card-title>{{developer.firstName}} {{developer.lastName}}</mat-card-title>
-        <mat-card-subtitle>Web developer</mat-card-subtitle>
+        <mat-card-subtitle>{{developer.shortDescription}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
         <p>
             {{developer.summary}}
         </p>
+        <mat-chip-list>
+            <mat-chip *ngFor="let skill of developer.skills">{{skill.name}}</mat-chip>
+        </mat-chip-list>
     </mat-card-content>
     <mat-card-actions>
         <button mat-button>View Full profile</button>
